--- a/src/components/white-wrap/_white-wrap.sass
+++ b/src/components/white-wrap/_white-wrap.sass
@@ -14,6 +14,8 @@
         width: 100%
         max-width: 895px
 
+        .result__static,
+        .result__container,
         .footer
             display: none
 
