Реализовал анимированный спиннер с процентами на странице захвата телефона

--- a/src/components/quiz/_quiz.sass
+++ b/src/components/quiz/_quiz.sass
@@ -100,6 +100,10 @@
                 font-weight: 300
                 line-height: 1.13
 
+        &-hide
+            opacity: 0
+            transition: opacity 0.3s ease
+
     // Present
     &__present
         max-width: 211px
