--- a/src/components/quiz/quiz__get-phone.pug
+++ b/src/components/quiz/quiz__get-phone.pug
@@ -48,7 +48,7 @@
     .spinner-block.mb-25
         include ../../components/spinner-block/spinner-block
 
-    .text-center
+    .quiz__get-phone-hide.quiz__get-phone-hide--js.text-center
         p.mb-0 Результат тестирования и набор мини-техник для тебя сформирован.
         p.mb-0
             strong Он откроется сразу, после регистрации
